--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap');
+
 .hind-madurai-light {
   font-family: "Hind Madurai", sans-serif;
   font-weight: 300;
@@ -31,255 +32,371 @@
 
 
 
-body{
-  margin:0;
+body {
+  margin: 0;
   font-family: "Helvetica Neue", Arial, sans-serif;
-  background-color:rgba(65, 255, 107, 0.1);
-  color:#0b2b17;
+  background-color: rgba(65, 255, 107, 0.1);
+  color: #0b2b17;
 }
 
 /* Navbar */
-.navbar{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   max-width: 1920px;
   height: 100px;
-  padding:0 60px;
+  padding: 0 60px;
   background: #ffffff;
-  position:sticky;
+  position: sticky;
   margin: 0 auto;
-  top:0;
+  top: 0;
 }
-.brand{
-  display:flex;
-  align-items:center;
-  gap:12px;
-  font-weight:700;
-  color:green;
+
+.brand {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  font-weight: 700;
+  color: green;
 }
-.brand .logo{
-  width:38px;
-  height:38px;
-  border-radius:8px;
-  background:green;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  color:#fff;
-  font-weight:700;
+
+.brand .logo {
+  width: 38px;
+  height: 38px;
+  border-radius: 8px;
+  background: green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-weight: 700;
 }
-.nav-stats{
-  display:flex;
-  gap:12px;
-  align-items:center;
+
+.nav-stats {
+  display: flex;
+  gap: 12px;
+  align-items: center;
 }
-.logo-small{
+
+.logo-small {
   width: 24px;
   height: 24px;
 }
-.logo-head{
+
+.logo-head {
   width: 50px;
   height: 50px;
 }
-.stat{
-  display:flex;
-  justify-content: center;
-  align-items:center;
-  background:#00A63E;
-  color: white;
-  border-radius:50px;
-  padding:14px 36px;
-  margin-left: 20px;
-  gap:10px;
-  border:none;
-  font-size:16px;
-}
-.stat2{
+
+.stat {
   display: flex;
   justify-content: center;
-  align-items:center;
-  background:rgba(65, 255, 107, 0.1);
+  align-items: center;
+  background: #00A63E;
+  color: white;
+  border-radius: 50px;
+  padding: 14px 36px;
+  margin-left: 20px;
+  gap: 10px;
+  border: none;
+  font-size: 16px;
+}
+
+.stat2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(65, 255, 107, 0.1);
   color: black;
-  border-radius:50px;
-  padding:14px 36px;
-  gap:10px;
-   margin-left: 20px;
-  border:none;
-  font-size:16px;
+  border-radius: 50px;
+  padding: 14px 36px;
+  gap: 10px;
+  margin-left: 20px;
+  border: none;
+  font-size: 16px;
 }
 
 /* Hero */
-.dark-logo{
+.dark-logo {
   height: 92px;
   width: 92px;
 }
-.heroMain{
+
+.heroMain {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 239px;
-  background: linear-gradient(90deg,#013223 0%, #006747 50%, #013223 100%);
-  color:white;
-  padding:21px 21px;
+  background: linear-gradient(90deg, #013223 0%, #006747 50%, #013223 100%);
+  color: white;
+  padding: 21px 21px;
 }
-.flex{
+
+.flex {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 /* Layout */
-.container{
-  max-width:1150px;
-  margin:20px auto;
-  padding:0 18px 60px;
-  display:grid;
+.container {
+  max-width: 1150px;
+  margin: 20px auto;
+  padding: 0 18px 60px;
+  display: grid;
   grid-template-columns: 1fr 320px;
-  gap:20px;
+  gap: 20px;
 }
-.grid{
-  display:grid;
-  grid-template-columns: repeat(3,1fr);
-  gap:18px;
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 18px;
 }
 
 /* Card */
-.card{
-  background:white;
-  border-radius:12px;
-  padding:14px;
-  box-shadow:0 2px 3px rgba(0, 0, 0, 0.15);
-  display:flex;
-  flex-direction:column;
-  gap:8px;
-}
-.card-top{
-  display:flex;
-  gap:12px;
-  align-items:center;
+.card {
+  background: white;
+  border-radius: 12px;
+  padding: 14px;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
-.icon-size{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  border-radius:16px;
+.card-top {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgba(92, 92, 92, 1);
+  height: 24px;
+  width: 24px;
+}
+
+.card-icon2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  height: 24px;
+  width: 24px;
+}
+
+.icon-size {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
   height: 32px;
   width: 32px;
   background-color: #FFE3E2;
   padding: 14px;
 }
 
-.titles{
-  flex:1;
-}
-.bn-title{
-  font-weight:700;
-  font-size:15px;
-}
-.en-title{
-  font-size:12px;
-  color:var(--muted)
-}
-.heart-btn{
-  background:transparent;
-  border:none;
-  font-size:20px;
-  cursor:pointer;
-}
-.liked{
-  color:#ff4d6d;
-}
-.number{
-  font-size:20px;
-  font-weight:700;
-  margin-top:6px;
-}
-.badge{
-  font-size:12px;
-  padding:6px 8px;
-  background:#f0fff3;
-  display:inline-block;
-  border-radius:999px;
-  color:var(--green);
-  border:1px solid #e6f4ea;
-  margin-top:4px;
-}
-.card-actions{
-  margin-top:auto;
-  display:flex;
-  gap:8px;
-}
-.btn{
-  flex:1;
-  padding:8px 10px;
-  border-radius:8px;
-  border:1px solid #e6efe7;
-  cursor:pointer;
-  font-weight:600;
-}
-.btn.copy{
-  background:transparent;
-}
-.btn.call{
-  background:green;
-  color:white;
-  border:none;
+.icon-size2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  height: 32px;
+  width: 32px;
+  background-color: #DFEFFF;
+  padding: 14px;
 }
 
-/* History */
-.history{
-  background:#fff;
-  border-radius:10px;
-  padding:14px;
-  box-shadow:0 6px 18px rgba(14,49,30,0.04);
-}
-.history-head{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-bottom:10px;
-}
-.history-title{
-  font-weight:700;
-  display:flex;
-  gap:10px;
-  align-items:center;
-}
-.history-list{
-  display:flex;
-  flex-direction:column;
-  gap:8px;
-  max-height:420px;
-  overflow:auto;
-}
-.history-item{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  background:#fbfffb;
-  padding:8px 10px;
-  border-radius:8px;
-  border:1px solid #f0faf0;
-  font-size:14px;
-}
-.history-item .meta{
-  display:flex;
-  flex-direction:column;
-}
-.time{
-  font-size:12px;
-  color:var(--muted)
+.titles {
+  flex: 1;
 }
 
-/* Responsive */
-@media (max-width:1100px){
-  .container{grid-template-columns:1fr 300px}
-  .grid{grid-template-columns:repeat(2,1fr)}}
-@media (max-width:780px){
-  .container{grid-template-columns:1fr}
-  .grid{grid-template-columns:1fr}}
+.bn-title {
+  font-weight: 700;
+  font-size: 15px;
+}
 
-.muted{color:var(--muted);font-size:13px}
+.en-title {
+  font-size: 12px;
+  color: var(--muted)
+}
+
+.heart-btn {
+  background: transparent;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.liked {
+  color: #ff4d6d;
+}
+
+.number {
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 6px;
+}
+
+.badge2 {
+  color: #5C5C5C;
+  background-color: #F2F2F2;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9999px;
+  padding: 6px 16px;
+}
+
+.card-actions {
+  margin-top: auto;
+  display: flex;
+  gap: 8px;
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  padding: 8px 10px;
+  border-radius: 8px;
+  border: 1px solid #e6efe7;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.btn.copy {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  flex-wrap: wrap;
+}
+
+.btn.call {
+  background: green;
+  color: white;
+  border: none;
+}
+
+/* History style */
+.history {
+  background: #fff;
+  border-radius: 10px;
+  padding: 14px;
+  box-shadow: 0 6px 18px rgba(14, 49, 30, 0.04);
+}
+
+.history-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.history-title {
+  font-weight: 700;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.history-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  max-height: 420px;
+  overflow: auto;
+}
+
+.history-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #fbfffb;
+  padding: 8px 10px;
+  border-radius: 8px;
+  border: 1px solid #f0faf0;
+  font-size: 14px;
+}
+
+.history-item .meta {
+  display: flex;
+  flex-direction: column;
+}
+
+.time {
+  font-size: 12px;
+  color: var(--muted)
+}
+
+/* Responsive on mobile phone  */
+
+@media (max-width:768px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+
+  .grid {
+    grid-template-columns: 1fr
+  }
+  body{
+    overflow: hidden;
+  }
+  /* navbar */
+  .navbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 100%;
+  height: 70px;
+  padding: 0 10px;
+  background: #ffffff;
+  margin: 0 auto;
+  top: 0;
+  }
+
+  .logo-head {
+  width: 40px;
+  height: 40px;
+}
+
+.stat {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #00A63E;
+  color: white;
+  border-radius: 50px;
+  padding: 8px 17px;
+  margin-left: 5px;
+  gap: 5px;
+  border: none;
+  font-size: 16px;
+}
+
+.stat2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(65, 255, 107, 0.1);
+  color: black;
+  border-radius: 50px;
+  padding: 8px 17px;
+  gap: 5px;
+  margin-left: 5px;
+  border: none;
+  font-size: 16px;
+}
+
+}
