--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap');
 
 .hind-madurai-light {
   font-family: "Hind Madurai", sans-serif;
@@ -34,7 +33,7 @@
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-family: "Hind Madurai", sans-serif;
   background-color: rgba(65, 255, 107, 0.1);
   color: #0b2b17;
 }
@@ -122,7 +121,9 @@ body {
   height: 92px;
   width: 92px;
 }
-
+.s{
+  text-align: center;
+}
 .heroMain {
   display: flex;
   flex-direction: column;
@@ -225,7 +226,7 @@ body {
 
 .en-title {
   font-size: 12px;
-  color: var(--muted)
+  color: #111111
 }
 
 .heart-btn {
@@ -257,6 +258,8 @@ body {
 }
 
 .card-actions {
+  display: flex;
+  align-items: center;
   margin-top: auto;
   display: flex;
   gap: 8px;
@@ -290,6 +293,9 @@ body {
 }
 
 .btn.call {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: #00A63E;
   color: white;
   border: none;
@@ -326,6 +332,7 @@ body {
 }
 
 .history-item {
+  color: #111111;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -343,7 +350,7 @@ body {
 
 .time {
   font-size: 12px;
-  color: var(--muted)
+  color: #111111
 }
 
 /* Responsive on mobile phone  */
